tests/snapshots/ast/r#mod__parser__expression_precedence__precedence__common__assertion__p27_precedence_power_vs_multiplication_1.snap
---
source: tests/00_common/assertion.rs
expression: ast
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Binary:
                left:
                  Var: a
                op: Power
                right:
                  Var: b
            op: Mul
            right:
              Var: c
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Binary:
              left:
                Var: a
              op: Power
              right:
                Var: b
          op: Mul
          right:
            Var: c
