tests/snapshots/ast/r#mod__parser__expression_precedence__precedence__common__assertion__p29_precedence_complex_expression_integration_1.snap
---
source: tests/00_common/assertion.rs
expression: ast
---
program:
  stmts:
    - Let:
        name: a
        kind: MutableStatic
        value:
          Binary:
            left:
              Binary:
                left:
                  Binary:
                    left:
                      Binary:
                        left:
                          Binary:
                            left:
                              Unary:
                                op: Neg
                                expr:
                                  Call:
                                    callee:
                                      Member:
                                        target:
                                          Var: b
                                        field: c
                                    args: []
                            op: Power
                            right:
                              Var: d
                        op: Mul
                        right:
                          Var: e
                    op: Add
                    right:
                      Var: f
                op: Eq
                right:
                  Var: g
            op: And
            right:
              Var: h
  modules: []
  globals: []
  entry: ~
stmts:
  - Let:
      name: a
      kind: MutableStatic
      value:
        Binary:
          left:
            Binary:
              left:
                Binary:
                  left:
                    Binary:
                      left:
                        Binary:
                          left:
                            Unary:
                              op: Neg
                              expr:
                                Call:
                                  callee:
                                    Member:
                                      target:
                                        Var: b
                                      field: c
                                  args: []
                          op: Power
                          right:
                            Var: d
                      op: Mul
                      right:
                        Var: e
                  op: Add
                  right:
                    Var: f
              op: Eq
              right:
                Var: g
          op: And
          right:
            Var: h
